cleaned up and fixed up scroll problem

--- a/src/app/home/popup-login/popup-login.component.html
+++ b/src/app/home/popup-login/popup-login.component.html
@@ -1,4 +1,4 @@
-<div id="overlay" class="overlay overlay-absolute" *ngIf="!auth.status">
+<div id="overlay" class="overlay overlay-fixed" *ngIf="!auth.status">
     <div class="form-container">
      <h2>SignIn\SignUp</h2>
      <form >
