--- a/src/app/home/popup-notif/popup-notif.component.html
+++ b/src/app/home/popup-notif/popup-notif.component.html
@@ -1,4 +1,4 @@
-<div id="overlay" class="overlay overlay-absolute">
+<div id="overlay" class="overlay overlay-fixed">
   <div class="form-container" style='padding: 0'>
     <div class='notif-container'>
       <ng-container *ngFor="let msg of ns.otherMessages;" >
