--- a/src/app/home/popup-post/popup-post.component.html
+++ b/src/app/home/popup-post/popup-post.component.html
@@ -1,4 +1,4 @@
-<div id="overlay" class="overlay overlay-absolute">
+<div id="overlay" class="overlay overlay-fixed">
   <!--
   <div class="main-options clearfix">
       <div (click)="display='post'" [style.border-bottom]="display=='post'? '3px solid indianred' : '3px solid #f1c9c9'">create post</div>
