--- a/src/app/home/popup-upload/popup-upload.component.html
+++ b/src/app/home/popup-upload/popup-upload.component.html
@@ -1,4 +1,4 @@
 
-<div id="overlay" class="overlay overlay-absolute">
+<div id="overlay" class="overlay overlay-fixed">
   <app-upload-data></app-upload-data>
 </div>
