added some contnent

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@
 .sr-only {
   display:none;
 }
+.carousel-caption {
+  background: #000000ab;
+}
 /*-------------------------------------------------------------carousel*/
 
 .dumpster .carousel,
