--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -3,14 +3,14 @@
 
     <ngb-carousel *ngIf="images">
         <ng-template ngbSlide>
-          <img src="https://p0.piqsels.com/preview/345/1000/15/arches-national-park-dark-formation-galaxy.jpg">
+          <img src="../../../assets/images/labrador-retriever.jpg">
           <div class="carousel-caption">
             <h3>sign-in to continue</h3>
             <p style='font-style: italic'>- nikhil nayyar</p>
           </div>
         </ng-template>
         <ng-template ngbSlide>
-          <img src="https://live.staticflickr.com/2633/3966729594_980a3ece7a_b.jpg">
+          <img src="../../../assets/images/happy-in-grass.jpg">
           <div class="carousel-caption">
             <h3>from nik pc</h3>
             <p  style='font-style: italic'>Hello!</p>
