updated default password settings

--- a/src/app/home/popup-login/popup-login.component.html
+++ b/src/app/home/popup-login/popup-login.component.html
@@ -7,7 +7,7 @@
         <label for="email">Email</label>
        </div>
        <div class="col-75">
-        <input type="text" id="email" value="dynamonagestro@gmail.com" name="email" placeholder="email" #email>
+        <input type="text" id="email" value="" name="email" placeholder="email" #email>
        </div>
       </div>
       <div class="row">
@@ -15,7 +15,7 @@
         <label for="pass">Password</label>
        </div>
        <div class="col-75">
-        <input type="text" id="pass" value="nikhilnayyar" name="pass" placeholder="password" #pass>
+        <input type="password" id="pass" value="" name="pass" placeholder="password" #pass>
        </div>
       </div>
       <div class="row">
